card title border

--- a/projects.html
+++ b/projects.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel ="stylesheets" href="style.css">
+    <link rel ="stylesheet" href="/style.css">
     <title> Celine Sèbe - projects</title>
 </head>
 <body>
     <div class="projects">
         <div class="card-Booki">
             <h2> Booki</h2>
-            <a href="https://celinesebe.github.io/P2/"><img class="visuel-booki" src="/images/visuel-booki.jpeg">    
+            <a href="https://celinesebe.github.io/P2/"><img class="visuel-booki" src="/images/booki/visuel-booki.png">    
             </a>
         </div>
         <div class="card-ohmyfood">
