--- a/index.html
+++ b/index.html
@@ -25,16 +25,17 @@
             </div>
             <div class="hover">
                 <img class="profil" src="/images/profil.jpg">
-                <h2> Qui suis-je ?</h2>
-                <h3> Céline Sèbe  </h3>
-                <p> Enseignante en reconversion dans le développement web fullstack </p>
-                <p> Passionnée d'informatique, de biologie, de culture et de musique </p>
+                <div class="text-profil">
+                    <h2> Qui suis-je ?</h2>
+                    <p> Enseignante en reconversion dans le développement web fullstack </p>
+                    <p> Passionnée d'informatique et de biologie, de culture et de musique </p>    
+                </div>
                 <div class="git-logo">
                     <a href="https://www.linkedin.com/in/celine-sebe/"><img class="linkedin" src="/images/linkedIn.png" alt="logo linkedin"></a>
                     <a href="https://github.com/CelineSebe"><img class="github" src="/images/GitHub.png" alt="logo github"></a>
                     <a href="https://gitlab.com/CelineSebe"><img class="gitlab" src="/images/gitlab.webp" alt="logo gitlab"></a>
                 </div>    
-                <a href="mailto:dev@celinesebe.com">Me contacter <img class="mail" src="/images/mail.png" alt="lien vers mon mail"></a>
+                <a href="mailto:dev@celinesebe.com"> <img class="mail" src="/images/mail.png" alt="lien vers mon mail"></a>
 
             </div>
         </div>
@@ -100,20 +101,57 @@
         <div class="card">
             <div class="title">
                 <img class="projects" src="images/projects.png" alt="logo projet">
-                <h2> Projets </h2>
+                <h2> Démos Projets </h2>
             </div>
-            <div class="hover"><a href="projects.html">
-                <h2> Booki</h2>
-                <h2> Ohmyfood</h2>
-                <h2> Panthère </h2>
-                <h2> Kanap </h2>
-                <h2> Piquante </h2>
-                <h2> Groupomania </h2>
-                <h2> YesNo</h2>
-                <h2> RollerderbyRules</h2>
-                <h2> Le spectre </h2>
-                </a>
+            <div class="hover">
+                <div class="hover-proj">
+                    <div class="card-Booki">
+                        <h2> Booki</h2>
+                        <a href="https://celinesebe.github.io/P2/">
+                            <!-- <img class="visuel-booki" src="/images/booki/Visuel-booki2.png"> 
+                            <img class="visuel-booki" src="/images/booki/visuel-booki.png">        -->
+                            <img class="visuel-booki" src="/images/booki/Visuel-booki3.png">    
+                        </a>
+                    </div>
+                    <div class="card-ohmyfood">
+                        <h2> Ohmyfood</h2>
+                        <a href="https://celinesebe.github.io/P3/"><img class="visuel-myfood" src="/images/ohmyfood/Visuel-myfood2.png"></a>
+                    </div>
+                    <div class="card-panthere">
+                        <h2> Panthère </h2>
+                        <a href="https://celinesebe.github.io/P4/"><img class="visuel-panthere" src="/images/visuel-panthere.jpeg"></a>
+                    </div>
+                    <div class="card-kanap">
+                        <h2> Kanap </h2>
+                        <a href=""><img class="visuel-kanap" src="/images/visuel-kanap.jpeg"></a>
+                    </div>
+                    <div class="card-piquante">
+                        <h2> Piquante </h2>
+                        <a href=""><img class="visuel-piquante" src="/images/visuel-piquante.jpeg"></a>
+                    </div>
+                    <div class="card-groupomania">
+                        <h2> Groupomania </h2>
+                        <a href=""><img class="visuel-groupomania" src="/images/visuel-groupo.jpeg"></a>
+                    </div>
+                    <div class="card-yesno">
+                        <h2> YesNo</h2>
+                        <a href="https://yesno.celine.dufullstack.fr/"><img class="visuel-yesno" src="/images/visuel-yesno.jpeg"></a>
+                    </div>
+                    <div class="card-spectre">
+                        <h2> Le spectre </h2>
+                        <a href=""><img class="visuel-spectre" src="/images/visuel-spectre.jpeg"></a>
+                        <p> Work in progress</p>
+                    </div>
+                    <div class="rollerderbyrules">
+                        <h2> RollerderbyRules</h2>
+                        <a href=""><img class="visuel-rollerderby" src="/images/visuel-rollerderby.jpeg"></a>
+                        <p> Work in progress</p>
+                    </div>
+                </div> 
+
             </div>
+
+
         </div>
         <div class="card">
             <div class="title">
