project.html delete

--- a/index.html
+++ b/index.html
@@ -131,20 +131,19 @@
                     </div>
                     <div class="card-groupomania">
                         <h2> Groupomania </h2>
-                        <a href=""><img class="visuel-groupomania" src="/images/visuel-groupo.jpeg"></a>
+                        <a href=""><img class="visuel-groupomania" src="/images/visuel-groupomania.png"></a>
                     </div>
                     <div class="card-yesno">
                         <h2> YesNo</h2>
-                        <a href="https://yesno.celine.dufullstack.fr/"><img class="visuel-yesno" src="/images/visuel-yesno.jpeg"></a>
+                        <a href="https://yesno.celine.dufullstack.fr/"><img class="visuel-yesno" src="/images/visuel-yesno.png"></a>
                     </div>
                     <div class="card-spectre">
                         <h2> Le spectre </h2>
-                        <a href=""><img class="visuel-spectre" src="/images/visuel-spectre.jpeg"></a>
-                        <p> Work in progress</p>
+                        <a href=""><img class="visuel-spectre" src="/images/visuel-spectre.png"></a>
                     </div>
                     <div class="rollerderbyrules">
                         <h2> RollerderbyRules</h2>
-                        <a href=""><img class="visuel-rollerderby" src="/images/visuel-rollerderby.jpeg"></a>
+                        <a href=""><img class="visuel-rollerderby" src="/images/visuel-rollerderby.png"></a>
                         <p> Work in progress</p>
                     </div>
                 </div> 
