link gitlab fixed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <a href="https://www.linkedin.com/in/celine-sebe/"><img class="linkedin" src="./images/linkedIn.png" alt="logo linkedin"></a>
                         <a href="https://github.com/CelineSebe"><img class="github" src="./images/GitHub.png" alt="logo github"></a>
-                        <a href="https://gitlab.com/CelineSebe"><img class="gitlab" src="./images/gitlab.tiff" alt="logo gitlab"></a>
+                        <a href="https://gitlab.com/CelineSebe"><img class="gitlab" src="./images/gitlab.webp" alt="logo gitlab"></a>
                     </div> 
                 </div>
                   
@@ -211,6 +211,8 @@
             <h2> Céline Sèbe ©2023</h2>
             <p> Développeuse web fullstack</p>
             <p> dev@celinesebe.com </p>
+            <!-- <a href="https://www.instagram.com/choupi_sonne/"><img class="inst" src="./images/intagram.svg"></a>
+            <a href="https://www.twitter.com/celinesebe/"><img class="twit" src="./images/twitter.svg"></a> -->
         </div>
     </footer>
 </body>
